test/sema/s04/fail_funcin.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s04/fail_funcin.nsl — S4 (lang.ebnf:838) fail variant.
// `func_in` dummy args must be `input` terminals; an `output` here
// violates S4.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   dummy argument of 'func_in' must be declared 'input' (S4)
//
// **Phase 4a TDD red state**: no S4 checker exists; FAILS until
// Phase 4b T045.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

declare d {
  output b;
  func_in start(b);
}

// CHECK: error: dummy argument of 'func_in' must be declared 'input' (S4)
